this is a message

--- a/pages/orders.html
+++ b/pages/orders.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>orders</title>
 </head>
+
 <body>
     <h1>orders</h1>
-    <p><a href="pages/products.html">products</a> => relatív az URL, nem a domain gyökerétől nézi és a "pages" mappán belül keres egy másik "pages" mappát</p>
-    <p><a href="/pages/products.html">products</a> => "/" kell elé, hogy route URL legyen és a domain gyökerétől keresse</p>
+    <p><a href="pages/products.html">products</a> => relatív az URL, nem a domain gyökerétől nézi és a "pages" mappán
+        belül keres egy másik "pages" mappát</p>
+    <p><a href="/pages/products.html">products</a> => "/" kell elé, hogy route URL legyen és a domain gyökerétől keresse
+    </p>
+
+    <ul>
+        <li>
+            <a href="/fantastic burger.html">home</a>
+        </li>
+        <li>
+            <a href="/about.html">about</a>
+        </li>
+        <li>
+            <a href="/pages/products.html">products</a>
+        </li>
+        <li>
+            <a href="/pages/orders.html">orders</a>
+        </li>
+    </ul>
 </body>
+
 </html>
