--- a/about.html
+++ b/about.html
@@ -15,6 +15,21 @@
     <p><a href="/index.html">home</a> => route URL, mindig a domain gyökerétől nézi az útvonalat</p>
     <p><a href="pages/orders.html">orders</a></p>
 
+    <ul>
+        <li>
+            <a href="/fantastic burger.html">home</a>
+        </li>
+        <li>
+            <a href="/about.html">about</a>
+        </li>
+        <li>
+            <a href="/pages/products.html">products</a>
+        </li>
+        <li>
+            <a href="/pages/orders.html">orders</a>
+        </li>
+    </ul>
+
     <table>
         <caption>opening hours</caption>
         <thead>
