--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>az oldal címe</title>
 </head>
+
 <body>
     <h1>Ez egy címsor (heading).</h1>
     <h2>Ez egy címsor (heading).</h2>
@@ -12,11 +14,27 @@
     <h4>Ez egy címsor (heading).</h4>
     <h5>Ez egy címsor (heading).</h5>
     <h6>Ez egy címsor (heading).</h6>
-    <p>bekezdés (paragraph)</p> 
-    <p>bekezdés (paragraph)</p> 
+    <p>bekezdés (paragraph)</p>
+    <p>bekezdés (paragraph)</p>
     bekezdés (paragraph)
     bekezdés (paragraph)
     bekezdés (paragraph)
+
+    <ul>
+        <li>
+            <a href="/fantastic burger.html">home</a>
+        </li>
+        <li>
+            <a href="/about.html">about</a>
+        </li>
+        <li>
+            <a href="/pages/products.html">products</a>
+        </li>
+        <li>
+            <a href="/pages/orders.html">orders</a>
+        </li>
+    </ul>
+
     <p>Ez egy <em>dőlt betűs</em> szöveg.</p>
     <p>Ez egy <i>dőlt betűs</i> szöveg.</p>
     <p>Ez egy <strong>vastag betűs</strong> szöveg.</p>
@@ -111,8 +129,8 @@
 
 
 
-    
-    <h1 id="content">content => anchor URL, URL-be beírod az id-t (#content) és oda ugrik az oldalon</h1> 
+
+    <h1 id="content">content => anchor URL, URL-be beírod az id-t (#content) és oda ugrik az oldalon</h1>
 
 
 
@@ -137,4 +155,5 @@
     <p>Ez egy <strong>vastag betűs</strong> szöveg.</p>
     <p>Ez egy <b>vastag betűs</b> szöveg.</p>
 </body>
+
 </html>
