--- a/pages/products.html
+++ b/pages/products.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>products</title>
 </head>
+
 <body>
     <h1>products</h1>
+
+    <ul>
+        <li>
+            <a href="/fantastic burger.html">home</a>
+        </li>
+        <li>
+            <a href="/about.html">about</a>
+        </li>
+        <li>
+            <a href="/pages/products.html">products</a>
+        </li>
+        <li>
+            <a href="/pages/orders.html">orders</a>
+        </li>
+    </ul>
 </body>
+
 </html>
